server for bm25

--- a/BM25.ipynb
+++ b/BM25.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 1,
       "metadata": {
         "id": "tlmXURTV0PJg"
       },
@@ -64,17 +64,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
         "prefix = 'bm25_'\n",
-        "dataset = 'train_translated_squad_25'"
+        "dataset = 'train_reg'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 3,
       "metadata": {
         "id": "SeQ00gDK0x2H"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 7,
       "metadata": {
         "id": "oGyVQGqgynvQ"
       },
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -249,15 +249,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 19067/19067 [00:01<00:00, 9994.22it/s]"
+            "100%|██████████| 75/75 [00:00<00:00, 1818.40it/s]"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Number of documents: 19067\n",
-            "Number of segments: 45052\n"
+            "Number of documents: 75\n",
+            "Number of segments: 122\n"
           ]
         },
         {
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -329,19 +329,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "  0%|          | 1/20958 [00:00<2:12:01,  2.65it/s]c:\\Users\\ngoph\\.conda\\envs\\seminar\\lib\\site-packages\\transformers\\pipelines\\base.py:1043: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
-            "  warnings.warn(\n",
-            "  4%|▍         | 858/20958 [05:55<2:37:47,  2.12it/s]"
+            "c:\\Users\\ngoph\\.conda\\envs\\seminar\\lib\\site-packages\\transformers\\pipelines\\question_answering.py:325: UserWarning: topk parameter is deprecated, use top_k instead\n",
+            "  warnings.warn(\"topk parameter is deprecated, use top_k instead\", UserWarning)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 5.1167598940082826e-06,\n",
+              "  'start': 70,\n",
+              "  'end': 96,\n",
+              "  'answer': 'DELF_B1 hoặc TCF_niveau_3.'},\n",
+              " {'score': 2.61710647464497e-06, 'start': 70, 'end': 77, 'answer': 'DELF_B1'},\n",
+              " {'score': 7.453017758507485e-08,\n",
+              "  'start': 70,\n",
+              "  'end': 96,\n",
+              "  'answer': 'DELF_B1 hoặc TCF_niveau_3.'},\n",
+              " {'score': 4.069461922995288e-08,\n",
+              "  'start': 70,\n",
+              "  'end': 96,\n",
+              "  'answer': 'DELF_B1 hoặc TCF_niveau_3.'},\n",
+              " {'score': 1.69395963922625e-08,\n",
+              "  'start': 46,\n",
+              "  'end': 96,\n",
+              "  'answer': 'sinh viên cần tối thiểu DELF_B1 hoặc TCF_niveau_3.'}]"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "test = qa_model(question=questions[0][0], context=corpus_split_df[0], topk=5)\n",
+        "test\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'asdsda' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m asdsda\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'asdsda' is not defined"
           ]
         }
       ],
+      "source": [
+        "asdsda"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# score = w0 \\* retrieval_score + w1 \\* predict_score (linear regression)\n",
         "\n",
@@ -371,79 +427,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'question': 'Chuẩn đầu ra tiếng Pháp?',\n",
-              " 'answers': [{'start': 70,\n",
-              "   'end': 96,\n",
-              "   'answer': 'DELF_B1 hoặc TCF_niveau_3.',\n",
-              "   'retrieval_score': 12.748379317940245,\n",
-              "   'predict_score': 5.1167598940082826e-06,\n",
-              "   'context': 'Đối với chuẩn đầu ra ngoại ngữ là tiếng Pháp, sinh viên cần tối thiểu DELF_B1 hoặc TCF_niveau_3. Đối với chuẩn đầu ra ngoại ngữ là tiếng Nhật, sinh viên cần tối thiểu JLPT_N3'},\n",
-              "  {'start': 747,\n",
-              "   'end': 752,\n",
-              "   'answer': 'ĐTĐH.',\n",
-              "   'retrieval_score': 6.919311131756871,\n",
-              "   'predict_score': 5.754858310675964e-15,\n",
-              "   'context': 'Sinh viên có một trong các chứng chỉ tiếng Anh đạt trình độ quy định thì được đề nghị Trường xét miễn học các môn học tiếng Anh tương ứng trong chương trình đào tạo. Chứng chỉ tiếng Anh hoặc giấy chứng nhận kết quả kiểm tra trình độ tiếng Anh phải còn hiệu lực tính đến ngày xét công nhận. Chi tiết thang điểm xét miễn anh văn: Với Anh văn 1 (TOEIC[400],TOEFLiBT[32],IELTS[4.0],VNU[126-150]), với Anh văn 2 (TOEIC[450],TOEFL_iBT[37],IELTS[4.5],VNU[151-175]), với Anh văn 3 (TOEIC[500],TOEFL_iBT[42],IELTS[5.0],VNU[175-200]). Hai tuần trước khi bắt đầu học kỳ, sinh viên thỏa mãn các điều kiện về miễn học tại Khoản 1 điều này nộp đơn theo mẫu (phụ lục đính kèm) kèm theo bản sao và mang theo bản gốc của chứng chỉ để kiểm tra, đối chiếu cho Phòng ĐTĐH. Sau học kỳ thứ 2 của khóa học, sinh viên không được xem xét miễn học các môn học tiếng Anh trong chương trình đào tạo.'},\n",
-              "  {'start': 494,\n",
-              "   'end': 499,\n",
-              "   'answer': 'nhận.',\n",
-              "   'retrieval_score': 6.549582240537884,\n",
-              "   'predict_score': 3.76783167179936e-15,\n",
-              "   'context': 'Chứng chỉ tiếng Anh được công nhận bao gồm: Các loại chứng chỉ tiếng Anh quốc tế, bao gồm: TOEIC, TOEFL ITP, TOEFL iBT, IELTS, Cambridge English (PET, FCE, CAE), Chứng chỉ tiếng Anh nội bộ do các đơn vị, tổ chức khảo thí hoặc đào tạo tiếng Anh trong nước cấp được ĐHQG-HCM công nhận có giá trị sử dụng cho chương trình đào tạo trình độ Đại học. Chứng chỉ tiếng Anh hoặc giấy chứng nhận kiểm tra trình độ tiếng Anh còn hiệu lực và giá trị trong vòng 02 năm kể từ ngày cấp tính đến ngày xét công nhận.'},\n",
-              "  {'start': 222,\n",
-              "   'end': 227,\n",
-              "   'answer': 'ĐTĐH.',\n",
-              "   'retrieval_score': 5.3538277301033546,\n",
-              "   'predict_score': 8.592419107494344e-15,\n",
-              "   'context': 'Hai tuần trước khi bắt đầu học kỳ, sinh viên thỏa mãn các điều kiện về miễn học tại Khoản 1 điều này nộp đơn theo mẫu (phụ lục đính kèm) kèm theo bản sao và mang theo bản gốc của chứng chỉ để kiểm tra, đối chiếu cho Phòng ĐTĐH. Sau học kỳ thứ 2 của khóa học, sinh viên không được xem xét miễn học các môn học tiếng Anh trong chương trình đào tạo.'},\n",
-              "  {'start': 68,\n",
-              "   'end': 72,\n",
-              "   'answer': 'trà;',\n",
-              "   'retrieval_score': 4.970106182488715,\n",
-              "   'predict_score': 1.4183186383979942e-14,\n",
-              "   'context': 'Chương trình chất lượng cao được xây dựng dựa trên chương trình đại trà; đáp ứng mục tiêu và chuẩn đầu ra cao hơn, đồng thời đáp ứng các tiêu chí và điều kiện đảm bảo chất lượng của chương trình theo quy định hiện hành.'},\n",
-              "  {'start': 27,\n",
-              "   'end': 39,\n",
-              "   'answer': 'văn bằng hai',\n",
-              "   'retrieval_score': 4.3681038101842,\n",
-              "   'predict_score': 8.617068401534154e-16,\n",
-              "   'context': 'Chương trình liên thông và văn bằng hai được xây dựng dựa trên chương trình đại trà; đáp ứng mục tiêu và chuẩn đầu ra của bậc trình độ tương ứng. Chương trình đào tạo được xác định theo nguyên tắc: công nhận kết quả học tập đối với những môn học đã tích lũy trước đó để xét miễn các nội dung tương đương trong chương trình đào tạo.'},\n",
-              "  {'start': 99,\n",
-              "   'end': 106,\n",
-              "   'answer': 'trà.Nếu',\n",
-              "   'retrieval_score': 3.915632479464291,\n",
-              "   'predict_score': 5.929178220616491e-16,\n",
-              "   'context': 'Sinh viên có yêu cầu cá nhân được phép làm  đơn xin ra khỏi chương trình – trở về  lớp đào tạo đại trà.Nếu sinh viên xin ra khỏi hệ tài năng phải có trách nhiệm hoàn trả lại toàn bộ số tiền học bổng đã nhận'},\n",
-              "  {'start': 44,\n",
-              "   'end': 50,\n",
-              "   'answer': 'ĐTBHK.',\n",
-              "   'retrieval_score': 3.831333866838513,\n",
-              "   'predict_score': 3.8391166146815224e-17,\n",
-              "   'context': 'Ngoài ra điểm bảo lưu không được tính trong ĐTBHK.'},\n",
-              "  {'start': 274,\n",
-              "   'end': 278,\n",
-              "   'answer': 'ĐTĐH',\n",
-              "   'retrieval_score': 3.3790077443065116,\n",
-              "   'predict_score': 3.2791474478257795e-15,\n",
-              "   'context': 'Sau khi được xét trúng tuyển vào Trường, do một số hoàn cảnh đặc biệt  như bệnh tật, tai nạn, hoàn cảnh khó khăn xảy ra đột xuất, thí sinh trúng tuyển có thể xin bảo lưu kết quả. Thí sinh trúng tuyển phải nộp đơn xin bảo lưu chậm nhất 15 ngày kể từ ngày gọi nhập học cho P. ĐTĐH của Trường và chỉ được bảo lưu khi có quyết định chấp thuận của Hiệu trưởng. Thời gian bảo lưu kết quả trúng tuyển không quá 01 năm. Muốn nhập học lại, thí sinh phải làm đơn xin nhập học kèm theo quyết định bảo lưu nộp P. ĐTĐH của Trường trước khi bắt đầu học kỳ ít nhất 1 tháng để được giải quyết.'},\n",
-              "  {'start': 187,\n",
-              "   'end': 193,\n",
-              "   'answer': 'riêng.',\n",
-              "   'retrieval_score': 3.1291389263130456,\n",
-              "   'predict_score': 3.630731342473253e-15,\n",
-              "   'context': 'Hiệu trưởng xem xét và ra quyết định thu nhận cho từng trường hợp cụ thể. Sinh viên tự do và dự thính không được hưởng chính sách dành cho sinh viên chính quy, phải đóng học phí theo mức riêng.'}],\n",
-              " 'true_answer': 'DELF_B1 hoặc TCF_niveau_3'}"
-            ]
-          },
-          "execution_count": 32,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "results[0]"
       ]
@@ -465,19 +449,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Question: Chuẩn đầu ra tiếng Pháp?\n",
-            "Predicted answer: DELF_B1 hoặc TCF_niveau_3.\n",
-            "True answer: DELF_B1 hoặc TCF_niveau_3\n",
-            "exact_match: 0\n",
-            "f1: 0.6666666666666666\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#   w0 \\* retrieval_score + w1 \\* predict_score (linear regression)\n",
         "#   w0 + w1= 1\n",
@@ -503,21 +475,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "exact_match: 53\n",
-            "f1: 0.4049007918740147\n",
-            "\n",
-            "best_w0: 0.064\n",
-            "best_w1: 0.936\n",
-            "best_exact_match: 56\n",
-            "best_f1: 0.42795708098544266\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# find best w0, w1\n",
         "def compute_score(w0, w1, results):\n",
@@ -563,19 +521,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Question: Chuẩn đầu ra tiếng Pháp?\n",
-            "Predicted answer: DELF_B1 hoặc TCF_niveau_3.\n",
-            "True answer: DELF_B1 hoặc TCF_niveau_3\n",
-            "exact_match: 0\n",
-            "f1: 0.6666666666666666\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "test = results[0]\n",
         "test_answers= test['answers']\n",
@@ -596,18 +542,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "train_reg\n",
-            "number of docs: 75\n",
-            "number of segments: 122\n",
-            "number of questions: 626\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(dataset)\n",
         "print('number of docs:',len(paragraphs))\n",
